# flocoder

./: Contributing.md  README.md  StyleGuide.md  generate_samples.py  preencode_data.py  pyproject.toml  train_flow.py  train_vqgan.py
configs/: base.yaml  flow.yaml  flowers_config.yaml  flowers_lowres_config.yaml  flowers_resize.yaml  flowers_sd.yaml  flowers_vqgan.yaml  midi.yaml  midi_inpainting.yaml  midi_vqgan.yaml  midi_vqgan_3d_gray.yaml  pop909_config.yaml  preencoding.yaml  stl_sd.yaml  vqgan.yaml  vqgan_config.json  vqgan_config.yaml
configs/common/: base.yaml  flow.yaml  midi.yaml  preencoding.yaml  vqgan.yaml
flocoder/: codebook_analysis.py  codecs.py  data.py  general.py  inpainting.py  losses.py  metrics.py  pianoroll.py  sampling.py  unet.py  viz.py
legacy/: train_flowers.py  train_sd_flowers.py  unet.py  unet_ty.py
notebooks/: README.md  SD_Flower_Flow.ipynb  project_overview.ipynb  rise.css
scripts/: preencode_data.py  train_flow.py  train_vqgan.py
src/flocoder/data/: dataloaders.py  datasets.py
src/flocoder/eval/: metrics.py
src/flocoder/models/: unet.py  vqvae.py
src/flocoder/training/: vqgan_losses.py  vqvae_trainer.py
src/flocoder/utils/: viz.py
