[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flocoder" 
version = "0.1.0"
authors = [
  { name = "Scott H. Hawley", email = "scott.hawley@belmont.edu" },
]
description = "A latent generative flow matching model for MIDI piano roll images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flocoder"]

[tool.hatch.build.targets.sdist]
include = [
    "src/flocoder/**/*",
    "tests/**/*",
    "scripts/**/*",
    "configs/**/*",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
exclude = [
    "notebooks/**/*",
]
