[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flocoder"
version = "0.1.2"
authors = [{ name = "Scott H. Hawley", email = "scott.hawley@belmont.edu" }]
description = "A library for teaching and exploring generative latent flow matching"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# minimal base dependencies; see other targets below for more
dependencies = [
    "hydra-core>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Packages Colab already has
colab-has = [
    "torch>=2.0.0",
    "torchvision",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pillow>=9.0.0",
    "tqdm>=4.64.0",
    "plotly",
    "scipy>=1.15.3",
    "diffusers",
]

# Inference dependencies
recommended = [
    "colab-has",
    "natten>=0.20.1",
    "vector-quantize-pytorch>=1.22.4"]

# MIDI support
midi = ["pretty-midi>=0.2.10"]

# Training dependencies
training = [
    "recommended",
    "geomloss", 
    "wandb>=0.15.0",
    "torchmetrics[image]",
]

# Development  
dev = [
    "colab-has",
    "midi", 
    "training",
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "gradio>=4.0.0",
]

# Full installation
all = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["flocoder"]

[tool.hatch.build.targets.sdist]
include = [
    "flocoder/**/*",
    "tests/**/*", 
    "scripts/**/*",
    "configs/**/*",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
exclude = ["notebooks/**/*"]
